[package]
name = "abu-keygentool"
version = "0.1.2"
edition = "2024"
description = "Alpha Bank Union (ABU) ECC Key Generator for Alpha Coin"
license = "MIT"
authors = ["Max Shin <xhzmax@outlook.com>"]

[dependencies]
ring = "0.17.7"
sequoia-openpgp = { version = "2.2.0", default-features = false, features = ["crypto-cng"] }
rpassword = "7.3.1"
dialoguer = "0.11.0"
console = "0.15.7"
anyhow = "1.0.80"
thiserror = "1.0.56"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
aes-gcm = "0.10.3"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rand = "0.8.5"
sha2 = "0.10"
chrono = "0.4.31"
bytes = "1.6.0"
native-dialog = "0.7.0"